# coven-threads

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.beads/: interactions.jsonl  metadata.json
.github/workflows/: ci.yml
crates/coven-threads-core/: Cargo.toml
crates/coven-threads-core/examples/: generate_phase5_retired_ward_corpus.rs
crates/coven-threads-core/src/: approval.rs  audit.rs  channel.rs  fray.rs  identity_invariants.rs  ids.rs  lib.rs  manifest.rs  pattern.rs  portability.rs  staging.rs  strand.rs  surface_regions.rs  thread.rs  validate.rs  weave.rs
crates/coven-threads-core/tests/: c7_roundtrip.rs  phase5_retired_ward_corpus.rs  rfc0001_s5_conformance.rs
crates/coven-threads-core/tests/support/: phase5_retired_ward_corpus.rs
docs/: README.md  STATUS-2026-07-15.md  architecture.md  authority-model.md  channels-and-strands.md  concepts.md  faq.md  glossary.md  phases.md
docs/diagrams/: README.md  mermaid-config.json  render.sh
docs/diagrams/src/: channel-strand-matrix.mmd  delayed-apply-scheduler.mmd  enforcement.mmd  stack.mmd  thread-tension-state.mmd  weave-thread-strand.mmd
docs/superpowers/plans/: 2026-07-19-apply-audit-migration-repair.md
docs/superpowers/specs/: 2026-07-19-apply-audit-migration-repair-design.md
slides/community-explainer/: .gitignore  package.json  pnpm-lock.yaml  slides.md
specs/: PHASE-0-DESIGN.md  PHASE-3-PORTABILITY.md  PHASE-4-CAVE-SURFACES.md  PHASE-5-APPROVAL-SEMANTICS.md  PHASE-5-PROPOSAL-approval-semantics.md
